--- a/RemoteDeploy.Server/Views/_ViewImports.cshtml
+++ b/RemoteDeploy.Server/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using RemoteDeploy.Server
-@using RemoteDeploy.Server.Models
+﻿@using XDeploy.Server
+@using XDeploy.Server.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
