Added ability to create and edit apps

--- a/XDeploy.Server/Views/_ViewImports.cshtml
+++ b/XDeploy.Server/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using XDeploy.Server
 @using XDeploy.Server.Models
+@using XDeploy.Server.Infrastructure.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
