--- a/XDeploy.Server/Views/Home/Index.cshtml
+++ b/XDeploy.Server/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">ID: @app.ID</li>
-                        <li class="list-group-item">IP restricted: @app.IPRestrictedDeployer</li>
+                        <li class="list-group-item">IP-restricted: @app.IPRestrictedDeployer</li>
                         @if (app.IPRestrictedDeployer)
                         {
                             <li class="list-group-item">IP: @app.DeployerIP</li>
