--- a/XDeploy.Server/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/XDeploy.Server/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,21 +4,21 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
+<h2 class="ui header">@ViewData["Title"]</h2>
+<h4 class="ui header">Enter your email</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
+<div class="ui form">
+    <form method="post">
+        <div asp-validation-summary="All" class="inline field"></div>
+        <div class="field">
+            <label asp-for="Input.Email"></label>
+            <input asp-for="Input.Email" type="email" />
+           <span style="color:red;" asp-validation-for="Input.Email" class="inline field"></span>
+        </div>
+        <div class="field">
+            <button type="submit" class="ui button">Submit</button>
+        </div>
+    </form>
 </div>
 
 @section Scripts {
