--- a/XDeploy.Server/Areas/Identity/Pages/Account/Login.cshtml
+++ b/XDeploy.Server/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,35 +4,33 @@
 @{
     ViewData["Title"] = "Log in";
 }
-
-<h1>@ViewData["Title"]</h1>
+<h2 class="ui header">@ViewData["Title"]</h2>
 <div class="row">
-    <div class="col-md-4">
-        <section>
+    <section>
+        <div class="ui form">
             <form id="account" method="post">
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
+                <div class="field">
                     <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    <input asp-for="Input.Email" type="email" />
+                   <span style="color:red;" asp-validation-for="Input.Email" class="inline field"></span>
                 </div>
-                <div class="form-group">
+                <div class="field">
                     <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    <input asp-for="Input.Password" type="password" />
+                   <span style="color:red;" asp-validation-for="Input.Password" class="inline field"></span>
                 </div>
-                <div class="form-group">
-                    <div class="checkbox">
+                <div class="field">
+                    <div class="ui checkbox">
+                        <input asp-for="Input.RememberMe" />
                         <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
+
                         </label>
                     </div>
                 </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                <div class="field">
+                    <button type="submit" class="ui button">Log in</button>
                 </div>
-                <div class="form-group">
+                <div class="field">
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                     </p>
@@ -40,12 +38,12 @@
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                     </p>
                     <p>
-                        <button type="submit" asp-page-handler="SendVerificationEmail" class="btn-link" style="padding:0px;margin:0px;border:0px">Resend email confirmation</button>
+                        <button type="submit" class="ui button" asp-page-handler="SendVerificationEmail">Resend email confirmation</button>
                     </p>
                 </div>
             </form>
-        </section>
-    </div>
+        </div>
+    </section>
 </div>
 
 @section Scripts {
