--- a/XDeploy.Server/Areas/Identity/Pages/Account/Register.cshtml
+++ b/XDeploy.Server/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,33 +4,29 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
+<h2 class="ui header">@ViewData["Title"]</h2>
+<div class="ui form">
+    <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <hr />
+        <div asp-validation-summary="All" class="inline field"></div>
+        <div class="field">
+            <label asp-for="Input.Email"></label>
+            <input asp-for="Input.Email" class="form-control" />
+           <span style="color:red;" asp-validation-for="Input.Email" class="inline field"></span>
+        </div>
+        <div class="field">
+            <label asp-for="Input.Password"></label>
+            <input asp-for="Input.Password" type="password" />
+           <span style="color:red;" asp-validation-for="Input.Password" class="inline field"></span>
+        </div>
+        <div class="field">
+            <label asp-for="Input.ConfirmPassword"></label>
+            <input asp-for="Input.ConfirmPassword" type="password" />
+           <span style="color:red;" asp-validation-for="Input.ConfirmPassword" class="inline field"></span>
+        </div>
+        <button type="submit" class="ui button">Register</button>
+    </form>
 </div>
-
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
