--- a/XDeploy.Server/Views/Home/EditApp.cshtml
+++ b/XDeploy.Server/Views/Home/EditApp.cshtml
@@ -4,68 +4,77 @@
     ViewData["Title"] = (Model is null) ? "- New app" : "- Configure " + Model?.Name;
 }
 
-<form asp-route="@((Model is null) ? "CreateApp" : "EditApp")" method="post">
+<div class="ui form">
+    <form asp-route="@((Model is null) ? "CreateApp" : "EditApp")" method="post">
+        @if (Model?.ID != null)
+        {
+            <div class="field">
+                <input asp-for="ID" class="form-control flex-wrap" type="text" readonly>
+                <small id="nameHelp" class="form-text text-muted">The ID of the app.</small>
+            </div>
+        }
+        <div class="field">
+            <input asp-for="Name" type="text" class="form-control" id="name" placeholder="Name">
+           <span style="color:red;" asp-validation-for="Name" class="inline field"></span>
+            <br/>
+            <small id="nameHelp" class="form-text text-muted">The name of your app.</small>
+        </div>
+        <div class="field">
+            <input asp-for="Description" type="text" class="form-control" id="desc" placeholder="Description">
+           <span style="color:red;" asp-validation-for="Description" class="inline field"></span>
+            <br />
+            <small id="descHelp" class="form-text text-muted">A short description.</small>
+        </div>
+        <div class="field">
+            <div id="ipresarea" class="ui checkbox">
+                <input asp-for="IPRestrictedDeployer" type="checkbox" class="custom-control-input" id="iprestricted">
+               <span style="color:red;" asp-validation-for="IPRestrictedDeployer" class="inline field"></span>
+                <br />
+                <label class="custom-control-label" for="iprestricted" onselectstart="return false">IP-restricted deployer</label>
+                <small id="ipHelp" class="form-text text-muted">Allow the app to be deployed only from a single location.</small>
+                <input asp-for="DeployerIP" type="text" class="form-control" id="DeployerIP" placeholder="0.0.0.0">
+               <span style="color:red;" asp-validation-for="DeployerIP" id="ipwarn" class="inline field"></span>
+                <br />
+                <small @Html.Raw(((Model is null) ? false : Model.IPRestrictedDeployer) ? "" : " hidden") id="ipHelp2" class="form-text text-muted">The IP address of the deployer.</small>
+            </div>
+        </div>
+        <div class="field">
+            <div id="encarea" class="ui checkbox">
+                <input asp-for="Encrypted" type="checkbox" class="custom-control-input" id="encrypted">
+               <span style="color:red;" asp-validation-for="Encrypted" class="inline field"></span>
+                <br />
+                <label class="custom-control-label" for="encrypted" onselectstart="return false">Encrypt application</label>
+                <small id="encHelp" class="form-text text-muted">Don't trust 3rd parties? Encrypt the application using <a href="https://crypto.stackexchange.com/questions/2251/how-secure-is-aes-256">AES-256</a> before deployment and decrypt it once deployed. Key management is your duty.</small>
+            </div>
+        </div>
+        <div class="field">
+            <textarea asp-for="PredeployActions" type="text" rows="3" class="form-control" id="pred" placeholder=""></textarea>
+           <span style="color:red;" asp-validation-for="PredeployActions" class="inline field"></span>
+            <br />
+            <small id="predHelp" class="form-text text-muted">Pre-deployment command line actions (relative to the deployment directory)</small>
+        </div>
+        <div class="field">
+            <textarea asp-for="PostdeployActions" type="text" rows="3" class="form-control" id="postd" placeholder=""></textarea>
+           <span style="color:red;" asp-validation-for="PostdeployActions" class="inline field"></span>
+            <br />
+            <small id="postdHelp" class="form-text text-muted">Post-deployment command line actions (relative to the deployment directory)</small>
+        </div>
+        <button type="submit" class="ui button">@((Model is null) ? "Create" : "Save changes")</button>
+    </form>
     @if (Model?.ID != null)
     {
-        <div class="form-group">
-            <input asp-for="ID" class="form-control flex-wrap" type="text" readonly>
-            <small id="nameHelp" class="form-text text-muted">The ID of the app.</small>
-        </div>
+        <br />
+        <form asp-controller="Home" asp-action="Delete" asp-route-id="@Model?.ID" method="post">
+            <button type="submit" class="ui button red">Delete</button>
+        </form>
     }
-    <div class="form-group">
-        <input asp-for="Name" type="text" class="form-control" id="name" placeholder="Name">
-        <span asp-validation-for="Name" class="text-danger"></span>
-        <small id="nameHelp" class="form-text text-muted">The name of your app.</small>
-    </div>
-    <div class="form-group">
-        <input asp-for="Description" type="text" class="form-control" id="desc" placeholder="Description">
-        <span asp-validation-for="Description" class="text-danger"></span>
-        <small id="descHelp" class="form-text text-muted">A short description.</small>
-    </div>
-    <div class="form-group">
-        <div id="ipresarea" class="custom-control custom-checkbox">
-            <input asp-for="IPRestrictedDeployer" type="checkbox" class="custom-control-input" id="iprestricted">
-            <span asp-validation-for="IPRestrictedDeployer" class="text-danger"></span>
-            <label class="custom-control-label" for="iprestricted" onselectstart="return false">IP-restricted deployer</label>
-            <small id="ipHelp" class="form-text text-muted">Allow the app to be deployed only from a single location.</small>
-            <input asp-for="DeployerIP" type="text" class="form-control" id="DeployerIP" placeholder="0.0.0.0">
-            <span asp-validation-for="DeployerIP" id="ipwarn" class="text-danger"></span>
-            <small @Html.Raw(((Model is null) ? false : Model.IPRestrictedDeployer) ? "" : " hidden") id="ipHelp2" class="form-text text-muted">The IP address of the deployer.</small>
-        </div>
-    </div>
-    <div class="form-group">
-        <div id="encarea" class="custom-control custom-checkbox">
-            <input asp-for="Encrypted" type="checkbox" class="custom-control-input" id="encrypted">
-            <span asp-validation-for="Encrypted" class="text-danger"></span>
-            <label class="custom-control-label" for="encrypted" onselectstart="return false">Encrypt application</label>
-            <small id="encHelp" class="form-text text-muted">Don't trust 3rd parties? Encrypt the application using <a href="https://crypto.stackexchange.com/questions/2251/how-secure-is-aes-256">AES-256</a> before deployment and decrypt it once deployed. Key management is your duty.</small>
-        </div>
-    </div>
-    <div class="form-group">
-        <textarea asp-for="PredeployActions" type="text" rows="3" class="form-control" id="pred" placeholder=""></textarea>
-        <span asp-validation-for="PredeployActions" class="text-danger"></span>
-        <small id="predHelp" class="form-text text-muted">Pre-deployment command line actions (relative to the deployment directory)</small>
-    </div>
-    <div class="form-group">
-        <textarea asp-for="PostdeployActions" type="text" rows="3" class="form-control" id="postd" placeholder=""></textarea>
-        <span asp-validation-for="PostdeployActions" class="text-danger"></span>
-        <small id="postdHelp" class="form-text text-muted">Post-deployment command line actions (relative to the deployment directory)</small>
-    </div>
-    <button type="submit" class="btn btn-primary">@((Model is null) ? "Create" : "Save changes")</button>
-</form>
-@if (Model?.ID != null)
-{
-    <br />
-    <form asp-controller="Home" asp-action="Delete" asp-route-id="@Model?.ID" method="post">
-        <button type="submit" class="btn btn-danger">Delete</button>
-    </form>
-}
+</div>
 @if (Model != null)
 {
-<script>
+    <script>
     $("#pred").val(`@Html.Raw(Model.PredeployActions)`);
     $("#postd").val(`@Html.Raw(Model.PostdeployActions)`);
-</script>
+    </script>
 }
 <script>
     $(document).ready(function () {
