--- a/XDeploy.Server/Views/Shared/_Layout.cshtml
+++ b/XDeploy.Server/Views/Shared/_Layout.cshtml
@@ -4,48 +4,44 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XDeploy @ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+    <script src="~/js/site.js"></script>
+    <link rel="stylesheet" href="~/css/site.css" />
     @RenderSection("Scripts", required: false)
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">XDeploy</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            <p>
-                <a href="https://github.com/georgemihaila/xdeploy">
-                    <img src="~/lib/GitHub-Mark-32px.png" />
+    <div class="ui secondary  menu">
+        <a class="item" asp-action="Index" asp-controller="Home">
+            XDeploy
+        </a>
+        <a class="item" asp-action="Index" asp-controller="Home">
+            Home
+        </a>
+        <a class="item" asp-action="Index" asp-controller="Downloads">
+            Downloads
+        </a>
+        <div class="right menu">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a class="ui item" href="/Identity/Account/Logout">
+                    Log out
                 </a>
-            </p>
+            }
+            else
+            {
+                <a class="ui item" href="/Identity/Account/Login">
+                    Log in
+                </a>
+            }
         </div>
-    </footer>
-    
+    </div>
+    <div class="ui container">
+        @RenderBody()
+    </div>
 </body>
 </html>
